--- a/8-asynchronous-JS/final/asynchronous.html
+++ b/8-asynchronous-JS/final/asynchronous.html
@@ -23,6 +23,8 @@
 
         first();
 
+        //The second function will fire last
+
         // function getRecipe() {
         //     setTimeout(() => {
         //         const recipeID = [523, 883, 432, 974];
