--- a/8-asynchronous-JS/final/asynchronous.html
+++ b/8-asynchronous-JS/final/asynchronous.html
@@ -9,19 +9,19 @@
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
-        const second = () => {
-            setTimeout(() => {
-                console.log('Async Hey there');
-            }, 2000);
-        }
+        // const second = () => {
+        //     setTimeout(() => {
+        //         console.log('Async Hey there');
+        //     }, 2000);
+        // }
 
-        const first = () => {
-            console.log('Hey there');
-            second();
-            console.log('The end');
-        }
+        // const first = () => {
+        //     console.log('Hey there');
+        //     second();
+        //     console.log('The end');
+        // }
 
-        first();
+        // first();
 
         //The second function will fire last
 
